# fastapi-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: constants.py  main.py
app/api/routes/: health.py
app/api/routes/auth/: __init__.py  dependencies.py  routes.py
app/api/routes/products/: __init__.py  admin.py  dependencies.py  public.py
app/constants/: __init__.py  product_constants.py  user_constants.py
app/core/: config.py
app/db/: session.py
app/dependencies/: __init__.py
app/exceptions/: __init__.py  base.py  handlers.py  products.py  token.py  users.py
app/locales/: en_US.json  es_ES.json  pt_BR.json
app/models/: __init__.py  address.py  base.py  item.py  scope.py  user.py
app/models/products/: __init__.py  product.py
app/models/users/: __init__.py  user.py
app/schemas/auth/: __init__.py  requests.py  responses.py
app/schemas/products/: __init__.py  requests.py  responses.py
app/schemas/users/: __init__.py  responses.py
app/services/: token_service.py
app/services/auth/: service.py
app/services/products/: __init__.py  service.py
app/services/users/: __init__.py  passwords.py  service.py
migrations/: env.py
migrations/versions/: 20260623_2142_4e302a2bca2e_initial_migration.py  20260623_2158_033bb19a5d0a_add_products.py  d5c63336ca57_initial_migration.py
