[tool.poetry]
name = "checkpoint"
version = "0.1.0"
description = "FastAPI service base with SQLAlchemy, Pydantic, PostgreSQL, and Alembic."
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.14"
alembic = "^1.16.0"
asyncpg = "^0.30.0"
fastapi = "^0.115.0"
pydantic = "^2.11.0"
pydantic-settings = "^2.9.0"
sqlalchemy = { version = "^2.0.0", extras = ["asyncio"] }
uvicorn = { version = "^0.34.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.26.0"
ruff = "^0.11.0"

[tool.poetry.scripts]
checkpoint = "app.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
