[tool.poetry]
name = "checkpoint"
version = "0.1.0"
description = "FastAPI service base with SQLAlchemy, Pydantic, PostgreSQL, and Alembic."
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.14"
alembic = "^1.16.0"
asyncpg = "^0.31.0"
fastapi = "^0.115.0"
pydantic = "^2.11.0"
pydantic-settings = "^2.9.0"
pyjwt = "^2.10.1"
sqlalchemy = { version = "^2.0.0", extras = ["asyncio"] }
uvicorn = { version = "^0.34.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.0"
mypy = "^1.16.0"
pre-commit = "^4.2.0"
pytest = "^8.3.0"
pytest-asyncio = "^1.0.0"
ruff = "^0.11.0"

[tool.poetry.scripts]
checkpoint = "app.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[tool.bandit]
exclude_dirs = [".venv", "tests"]
